Fixed bug degree/rad conversion + improved math and angle normalization